Fix remove jQuery css functions

--- a/app/styles/includes/_menu.scss
+++ b/app/styles/includes/_menu.scss
@@ -33,6 +33,7 @@
     &.is-menu-sticky{
       background-color: #fff;
       max-height: 64px;
+      position: fixed;
 
       &:after{
         content: '';
